--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^19.2.3",
     "vite": "^7.3.1",
     "path": "^0.12.7",
-    "@vitejs/plugin-react": "^5.1.2"
+    "@vitejs/plugin-react": "^5.1.2",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
